get build to work

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,14 +1,18 @@
 CC=g++
 CFLAGS=-std=c++11 -c -Wall
 INCLUDES=-I../SFML-2.1/include
-LIBRARIE=-l../SFML-2.1/bin/sfml-window-d-2
+LIBRARYDIR=-L../SFML-2.1/lib
+LIBS=-lsfml-window-d -lsfml-main-d -lsfml-system-d -lsfml-graphics-d -lsfml-audio-d
 PROGNAME=executioner
 
 .PHONY: clean
 
 all: $(PROGNAME)
 $(PROGNAME): main.o
-	$(CC) $(INCLUDES) $(LIBRARIES) main.o -o ../bin/$(PROGNAME).exe
+	$(CC) $(INCLUDES) main.o $(LIBRARYDIR) $(LIBS) -o ../bin/$(PROGNAME).exe 
 
 main.o: main.cpp
-	$(CC) $(CFLAGS) $(INCLUDES) $(LIBRARIES) main.cpp
+	$(CC) $(CFLAGS) $(INCLUDES) main.cpp
+
+clean:
+	rm *.o
